--- a/static/sass/pybossa/_footer.scss
+++ b/static/sass/pybossa/_footer.scss
@@ -6,6 +6,11 @@ footer {
     margin-top: 25px;
 }
 
+footer .row
+{
+    margin-left:2px;
+}
+
 footer .col-md-2 p:first-child
 { margin-top: 12px;
   padding-bottom: 30px;
